With sensor related API's
